# estp

./: README.MD  commons.py  dimension_test.py  main.py  plane_test.py  random_data.py  requirements.txt
cpp1/: CMakeLists.txt  CMakeLists1.txt  build_and_run.sh  cleanup_procedure.cpp  cleanup_procedure.hpp  commons.cpp  commons.hpp  edge_insertion.cpp  edge_insertion.hpp  local_optimization.cpp  local_optimization.hpp  local_search.cpp  local_search.hpp  main  main.cpp  main1  main1.cpp  main2.cpp  main_total.cpp  my_program  plane_test.cpp  point.cpp  point.hpp  prim.cpp  prim.hpp  steiner_topology_recovery.cpp  steiner_topology_recovery.hpp  test.cpp  test_cgal.cpp  tree.cpp  tree.hpp  weiszfeld.cpp  weiszfeld.hpp
cpp1/build1/: CMakeCache.txt  Makefile  cmake_install.cmake  estp_project
cpp1/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  estp_project  read_file
data/: estein10_3D.txt  estein10_4D.txt  estein10_5D.txt
output/: table2.txt  table3.txt
paper/: cleanup_procedure.py  edge_insertion.py  local_search.py  steiner_topology_recovery.py
proposed/: local_optimization.py  weiszfeld.py
utilities/: point.py  prim.py  tree.py
